<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <androidx.preference.PreferenceCategory
    app:key="normalCategory"
    app:title="@string/pref_group_normal">

    <androidx.preference.SwitchPreferenceCompat
      app:defaultValue="true"
      app:icon="@drawable/ic_apk_analytics"
      app:key="apkAnalytics"
      app:summary="@string/apk_analytics_summary"
      app:title="@string/apk_analytics" />

    <com.absinthe.libchecker.ui.preference.InlineListPreference
      app:defaultValue="notify"
      app:entries="@array/snapshot_keep"
      app:entryValues="@array/snapshot_keep_value"
      app:icon="@drawable/ic_outline_save"
      app:key="snapshotKeep"
      app:title="@string/snapshot_keep" />

    <androidx.preference.Preference
      app:icon="@drawable/ic_threshold"
      app:key="libRefThreshold"
      app:summary="@string/lib_ref_threshold_summary"
      app:title="@string/lib_ref_threshold" />

    <androidx.preference.Preference
      app:icon="@drawable/ic_color_palette"
      app:key="appearance"
      app:summary="@string/pref_appearance_summary"
      app:title="@string/pref_group_appearance" />

  </androidx.preference.PreferenceCategory>

  <androidx.preference.PreferenceCategory
    app:key="rulesCategory"
    app:title="@string/pref_group_rules">

    <com.absinthe.libchecker.ui.preference.InlineListPreference
      app:defaultValue="gitlab"
      app:entries="@array/list_repo"
      app:entryValues="@array/list_repo_value"
      app:icon="@drawable/ic_repository"
      app:key="rulesRepository"
      app:title="@string/rules_repo_title" />

    <androidx.preference.Preference
      app:icon="@drawable/ic_github"
      app:key="githubApiToken"
      app:summary="@string/settings_github_token_summary_not_set"
      app:title="@string/settings_github_token" />

    <androidx.preference.Preference
      app:icon="@drawable/ic_cloud_rules"
      app:key="cloudRules"
      app:summary="@string/cloud_rules_summary"
      app:title="@string/cloud_rules" />

  </androidx.preference.PreferenceCategory>

  <androidx.preference.PreferenceCategory
    app:key="dataCategory"
    app:title="@string/pref_group_data">

    <androidx.preference.Preference
      app:icon="@drawable/ic_refresh"
      app:key="reloadApps"
      app:summary="@string/reload_apps_summary"
      app:title="@string/reload_apps" />

    <androidx.preference.Preference
      app:icon="@drawable/ic_app_list"
      app:key="exportApps"
      app:summary="@string/export_apps_webui_tip"
      app:title="@string/export_apps" />

    <androidx.preference.Preference
      app:icon="@drawable/ic_log"
      app:key="exportLog"
      app:summary="@string/export_log_summary"
      app:title="@string/export_log" />

  </androidx.preference.PreferenceCategory>

  <androidx.preference.PreferenceCategory
    app:key="aboutCategory"
    app:title="@string/pref_group_about">

    <androidx.preference.Preference
      app:icon="@drawable/ic_upgrade"
      app:key="getUpdates"
      app:summary="@string/settings_get_updates_summary"
      app:title="@string/settings_get_updates" />

    <androidx.preference.Preference
      app:icon="@drawable/ic_logo"
      app:key="about"
      app:summary="@string/settings_about_summary"
      app:title="@string/settings_about" />

    <androidx.preference.Preference
      app:icon="@drawable/ic_question"
      app:key="help"
      app:summary="@string/help_docs_summary"
      app:title="@string/help_docs" />

    <androidx.preference.Preference
      app:icon="@drawable/ic_translate"
      app:key="translation"
      app:summary="@string/settings_translate_summary"
      app:title="@string/settings_translate" />

    <androidx.preference.Preference
      app:icon="@drawable/ic_favorite"
      app:key="rate"
      app:summary="@string/settings_rate_us_summary"
      app:title="@string/settings_rate_us" />

    <androidx.preference.Preference
      app:icon="@drawable/ic_lib_telegram"
      app:key="tg"
      app:summary="@string/join_telegram_group_summary"
      app:title="@string/join_telegram_group" />

    <androidx.preference.SwitchPreferenceCompat
      app:defaultValue="true"
      app:icon="@drawable/ic_firebase_monochrome"
      app:key="analytics"
      app:summary="@string/anonymous_statistics_summary"
      app:title="@string/anonymous_statistics" />

  </androidx.preference.PreferenceCategory>

</androidx.preference.PreferenceScreen>
