<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <com.absinthe.libchecker.ui.preference.InlineListPreference
    app:defaultValue="system"
    app:entries="@array/list_dark_mode"
    app:entryValues="@array/list_dark_mode_value"
    app:icon="@drawable/ic_theme_system"
    app:key="darkMode"
    app:title="@string/dark_mode" />

  <androidx.preference.SwitchPreferenceCompat
    app:defaultValue="false"
    app:icon="@drawable/ic_theme_amoled"
    app:key="amoledTheme"
    app:summary="@string/amoled_theme_summary"
    app:title="@string/amoled_theme" />

  <androidx.preference.ListPreference
    app:defaultValue="SYSTEM"
    app:entries="@array/language"
    app:entryValues="@array/language_value"
    app:icon="@drawable/ic_language"
    app:key="locale"
    app:title="@string/languages" />

  <androidx.preference.SwitchPreferenceCompat
    app:defaultValue="true"
    app:icon="@drawable/ic_color_palette"
    app:key="colorfulIcon"
    app:summary="@string/colorful_icon_summary"
    app:title="@string/colorful_icon" />

  <androidx.preference.SwitchPreferenceCompat
    app:defaultValue="false"
    app:icon="@drawable/ic_blur"
    app:key="blurDesign"
    app:summary="@string/blur_design_summary"
    app:title="@string/blur_design" />

  <androidx.preference.SwitchPreferenceCompat
    app:defaultValue="false"
    app:icon="@drawable/ic_floating_bar"
    app:key="floatingNavBar"
    app:summary="@string/floating_nav_bar_summary"
    app:title="@string/floating_nav_bar" />

  <androidx.preference.SwitchPreferenceCompat
    app:defaultValue="false"
    app:icon="@drawable/ic_snapshot"
    app:key="legacySnapshotDetail"
    app:summary="@string/legacy_snapshot_detail_summary"
    app:title="@string/legacy_snapshot_detail" />

</androidx.preference.PreferenceScreen>
