<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_snapshot_timestamp_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/snapshot_current_timestamp"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tv_snapshot_timestamp_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/album_click_to_choose"
        android:textColor="@color/textNormal"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tv_snapshot_apps_count_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="sans-serif"
        android:text="@string/snapshot_apps_count"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tv_snapshot_apps_count_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="0"
        android:textColor="@color/textNormal"
        android:textSize="12sp"
        tools:ignore="HardcodedText" />

</LinearLayout>