<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="?android:colorBackground"
    android:minHeight="100dp"
    app:cardCornerRadius="5dp"
    app:cardElevation="0dp"
    app:rippleColor="@null"
    app:strokeColor="@color/cardBorder"
    app:strokeWidth="@dimen/album_card_stroke_width">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/normal_padding">

        <TextView
            android:id="@+id/tv_snapshot_timestamp_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/snapshot_current_timestamp"
            app:layout_constraintEnd_toStartOf="@id/ll_indicator"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_snapshot_timestamp_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/textNormal"
            app:layout_constraintStart_toStartOf="@id/tv_snapshot_timestamp_title"
            app:layout_constraintTop_toBottomOf="@id/tv_snapshot_timestamp_title"
            tools:text="2020-06-17-00:39:45" />

        <ImageView
            android:id="@+id/iv_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_arrow_drop_down"
            app:layout_constraintBottom_toBottomOf="@id/tv_snapshot_timestamp_text"
            app:layout_constraintStart_toEndOf="@id/tv_snapshot_timestamp_text"
            app:layout_constraintTop_toTopOf="@id/tv_snapshot_timestamp_text" />

        <TextView
            android:id="@+id/tv_snapshot_apps_count_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="sans-serif"
            android:text="@string/snapshot_apps_count"
            app:layout_constraintEnd_toStartOf="@id/ll_indicator"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_snapshot_timestamp_text" />

        <TextView
            android:id="@+id/tv_snapshot_apps_count_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/textNormal"
            app:layout_constraintStart_toStartOf="@id/tv_snapshot_timestamp_title"
            app:layout_constraintTop_toBottomOf="@id/tv_snapshot_apps_count_title"
            tools:text="117" />

        <LinearLayout
            android:id="@+id/ll_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.absinthe.libchecker.view.snapshot.SnapshotClassIndicatorView
                android:id="@+id/indicator_added"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_add"
                app:indicator="@color/material_green_300"
                app:text="@string/snapshot_indicator_added" />

            <com.absinthe.libchecker.view.snapshot.SnapshotClassIndicatorView
                android:id="@+id/indicator_removed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_remove"
                app:indicator="@color/material_red_300"
                app:text="@string/snapshot_indicator_removed" />

            <com.absinthe.libchecker.view.snapshot.SnapshotClassIndicatorView
                android:id="@+id/indicator_changed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_changed"
                app:indicator="@color/material_yellow_300"
                app:text="@string/snapshot_indicator_changed" />

            <com.absinthe.libchecker.view.snapshot.SnapshotClassIndicatorView
                android:id="@+id/indicator_moved"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_move"
                app:indicator="@color/material_blue_300"
                app:text="@string/snapshot_indicator_moved" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>